style(docs): 调整CSS字体族声明顺序
- 重新组织了字体族的声明顺序
- 统一了多个选择器的字体应用方式
- 移除了重复的字体族定义
- 优化了CSS选择器的排列结构

--- a/docs/.vuepress/custom.css
+++ b/docs/.vuepress/custom.css
@@ -36,15 +36,9 @@
 .blog-post-item-content .post-meta .tag-list,
 .blog-post-item-content .post-meta a,
 .vp-category-group .folder,
-.vp-doc-meta .tag {
-  font-family: "Ysabeau", "Inter", "Roboto", sans-serif;
-}
-
+.vp-doc-meta .tag,
 .vp-footer,
-.footer-message {
-  font-family: "Ysabeau", "Inter", "Roboto", sans-serif;
-}
-
+.footer-message,
 .profile-info {
   font-family: "Ysabeau", "Inter", "Roboto", sans-serif;
 }
